--- a/css/daft-media.webflow.css
+++ b/css/daft-media.webflow.css
@@ -443,6 +443,67 @@
   display: grid;
 }
 
+.w-checkbox {
+  margin-bottom: 5px;
+  padding-left: 20px;
+  display: block;
+}
+
+.w-checkbox:before {
+  content: " ";
+  grid-area: 1 / 1 / 2 / 2;
+  display: table;
+}
+
+.w-checkbox:after {
+  content: " ";
+  clear: both;
+  grid-area: 1 / 1 / 2 / 2;
+  display: table;
+}
+
+.w-checkbox-input {
+  float: left;
+  margin: 4px 0 0 -20px;
+  line-height: normal;
+}
+
+.w-checkbox-input--inputType-custom {
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  width: 12px;
+  height: 12px;
+}
+
+.w-checkbox-input--inputType-custom.w--redirected-checked {
+  background-color: #3898ec;
+  background-image: url('https://d3e54v103j8qbb.cloudfront.net/static/custom-checkbox-checkmark.589d534424.svg');
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-color: #3898ec;
+}
+
+.w-checkbox-input--inputType-custom.w--redirected-focus {
+  box-shadow: 0 0 3px 1px #3898ec;
+}
+
+.w-form-formradioinput--inputType-custom {
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  width: 12px;
+  height: 12px;
+}
+
+.w-form-formradioinput--inputType-custom.w--redirected-focus {
+  box-shadow: 0 0 3px 1px #3898ec;
+}
+
+.w-form-formradioinput--inputType-custom.w--redirected-checked {
+  border-width: 4px;
+  border-color: #3898ec;
+}
+
 @media screen and (max-width: 991px) {
   .w-layout-blockcontainer {
     max-width: 728px;
@@ -2601,6 +2662,7 @@ img {
 
 .full-page-5 {
   height: 25vh;
+  margin-top: auto;
   display: block;
 }
 
@@ -2988,8 +3050,6 @@ img {
 
 .how-it-works-info {
   height: auto;
-  margin-left: 7.5vw;
-  margin-right: 7.5vw;
   padding-top: 22vh;
 }
 
@@ -3030,7 +3090,9 @@ img {
 }
 
 .section-9 {
-  height: 100vh;
+  height: auto;
+  margin-left: 7vw;
+  margin-right: 7vw;
 }
 
 .phone-nav-contact.book {
@@ -3041,7 +3103,7 @@ img {
 .book-contact1 {
   justify-content: flex-start;
   align-items: center;
-  margin-top: 5vh;
+  margin-top: 0;
   display: flex;
 }
 
@@ -3052,7 +3114,7 @@ img {
 
 .email-nav-contact.underline-trail.black {
   color: var(--untitled-ui--gray900);
-  margin-left: 7.5vw;
+  margin-left: 0;
   text-decoration-thickness: 3px;
 }
 
@@ -3077,9 +3139,7 @@ img {
 
 .email-heading-contact.black {
   color: var(--untitled-ui--gray900);
-  margin-top: auto;
-  margin-bottom: 0;
-  margin-right: 0;
+  margin: 0 0 0 0;
   font-size: 2.5rem;
 }
 
@@ -3381,6 +3441,178 @@ img {
   line-height: 1.5;
 }
 
+.form-button {
+  background-color: #2e4e8c;
+  border-radius: 20px;
+  font-family: "9492803 Maisonneueext Demi", Impact, sans-serif;
+  font-size: 1.5rem;
+}
+
+.form-button:hover {
+  background-color: #4169b3;
+}
+
+.check-button-field {
+  border: 1px solid #000;
+  border-radius: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 20px;
+}
+
+.check-button-field:hover, .check-button-field.is-active {
+  background-color: #4169b3;
+}
+
+.needs-wrap {
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+  flex-flow: wrap;
+  justify-content: center;
+  margin-top: 2rem;
+  display: flex;
+}
+
+.radio-button, .radio-button-2, .radio-button-3, .radio-button-4, .radio-button-5 {
+  display: none;
+}
+
+.interested-in-wrap {
+  width: auto;
+  margin-top: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.form-button-text {
+  color: var(--untitled-ui--gray900);
+  font-family: "9492797 Maisonneueext", Impact, sans-serif;
+  font-size: 1.5rem;
+}
+
+.div-block-47 {
+  margin-left: 7vw;
+  margin-right: 7vw;
+}
+
+.form-heading {
+  color: var(--untitled-ui--gray900);
+  font-family: "9492805 Maisonneueext", Impact, sans-serif;
+  font-size: 1.5rem;
+}
+
+.text-field {
+  color: var(--untitled-ui--gray900);
+  border: 1px #000;
+  border-bottom: 1px solid #191919;
+  border-radius: 0;
+  font-family: "9492799 Maisonneueext Book", Impact, sans-serif;
+  font-size: 1.5rem;
+}
+
+.grid-10 {
+  grid-template-rows: auto;
+}
+
+.budget-wrap {
+  width: auto;
+  margin-top: 3rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.form-desc-div {
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+}
+
+.budget {
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+  flex-flow: wrap;
+  justify-content: center;
+  margin-top: 2rem;
+  display: flex;
+}
+
+.form-page {
+  height: auto;
+  margin-top: 10vh;
+  padding-bottom: 10vh;
+  display: block;
+}
+
+.form-arrow {
+  justify-content: center;
+  max-width: 5rem;
+  display: flex;
+}
+
+.fill-out-form {
+  color: #fff;
+  margin-left: 0;
+  font-family: "9492801 Maisonneueext", Impact, sans-serif;
+  font-size: 3.5rem;
+  font-weight: 500;
+}
+
+.fill-out-form.book {
+  color: #fff;
+  letter-spacing: -.01em;
+  background-color: #d8a628;
+  padding: 6px 10px;
+  font-family: "9492803 Maisonneueext Demi", Impact, sans-serif;
+  font-size: 3.5rem;
+}
+
+.fill-out-form.book:hover {
+  background-color: #e0b940;
+}
+
+.fill-out-form.book.blackcall {
+  background-color: var(--untitled-ui--gray900);
+  font-family: "9492805 Maisonneueext", Impact, sans-serif;
+  font-size: 2.5rem;
+}
+
+.fill-out-form.book.blackcall:hover {
+  background-color: #2e2e2e;
+}
+
+.fill-out-form.black {
+  color: var(--untitled-ui--gray900);
+  text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-family: "9492805 Maisonneueext", Impact, sans-serif;
+  font-size: 2.5rem;
+}
+
+.grid-11 {
+  grid-row-gap: 10px;
+}
+
+.checkbox {
+  display: none;
+}
+
+.radio-button-field {
+  border: 1px solid #000;
+  border-radius: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 20px;
+}
+
+.radio-button-field:hover, .radio-button-field.is-active {
+  background-color: #4169b3;
+}
+
+.how-it-works-div {
+  margin-left: 7vw;
+  margin-right: 7vw;
+}
+
 @media screen and (min-width: 1280px) {
   .nav_wrap {
     display: none;
@@ -3629,6 +3861,36 @@ img {
 
   .bold-text-10 {
     font-size: 1.13rem;
+  }
+
+  .form-button {
+    font-size: 1.5rem;
+  }
+
+  .check-button-field:hover {
+    text-transform: capitalize;
+    background-color: #4169b3;
+  }
+
+  .check-button-field:active {
+    background-color: #4169b3;
+  }
+
+  .form-button-text, .form-heading {
+    font-size: 1.5rem;
+  }
+
+  .fill-out-form.book {
+    padding: 6px 10px;
+  }
+
+  .radio-button-field:hover {
+    text-transform: capitalize;
+    background-color: #4169b3;
+  }
+
+  .radio-button-field:active {
+    background-color: #4169b3;
   }
 }
 
@@ -4060,6 +4322,64 @@ img {
 
   .uui-pricing05_packages-heading {
     font-size: 2.5rem;
+  }
+
+  .form-button {
+    font-size: 1.75rem;
+  }
+
+  .check-button-field {
+    text-transform: none;
+    cursor: pointer;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+
+  .check-button-field:hover, .check-button-field:active {
+    background-color: #4169b3;
+  }
+
+  .form-button-text {
+    font-size: 1.75rem;
+  }
+
+  .form-button-text:hover {
+    text-transform: none;
+  }
+
+  .form-heading {
+    font-size: 1.75rem;
+  }
+
+  .form-page {
+    display: block;
+  }
+
+  .fill-out-form:hover {
+    color: #fff;
+  }
+
+  .fill-out-form.book {
+    font-size: 4rem;
+  }
+
+  .fill-out-form.book.blackcall, .fill-out-form.black {
+    font-size: 3rem;
+  }
+
+  .fill-out-form.black:hover {
+    color: var(--untitled-ui--gray900);
+  }
+
+  .radio-button-field {
+    text-transform: none;
+    cursor: pointer;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+
+  .radio-button-field:hover, .radio-button-field:active {
+    background-color: #4169b3;
   }
 }
 
@@ -4657,6 +4977,80 @@ img {
 
   .bold-text-11 {
     font-size: 1.7rem;
+  }
+
+  .form-button {
+    font-size: 2.25rem;
+  }
+
+  .check-button-field {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .check-button-field:hover, .check-button-field:active {
+    background-color: #4169b3;
+  }
+
+  .needs-wrap {
+    grid-column-gap: 40px;
+    grid-row-gap: 40px;
+    margin-top: 3rem;
+  }
+
+  .interested-in-wrap {
+    margin-top: 3rem;
+  }
+
+  .form-button-text, .form-heading {
+    font-size: 2.25rem;
+  }
+
+  .text-field {
+    color: var(--untitled-ui--gray900);
+    font-size: 2.25rem;
+  }
+
+  .budget-wrap, .form-desc-div {
+    margin-top: 4rem;
+  }
+
+  .budget {
+    grid-column-gap: 80px;
+    grid-row-gap: 80px;
+    flex-flow: wrap;
+    justify-content: center;
+    margin-top: 3rem;
+  }
+
+  .form-page {
+    display: block;
+  }
+
+  .fill-out-form {
+    font-size: 5.5rem;
+  }
+
+  .fill-out-form.book {
+    padding: 11px 15px;
+    font-size: 6rem;
+  }
+
+  .fill-out-form.book:hover {
+    background-color: #fbd22f;
+  }
+
+  .fill-out-form.book.blackcall, .fill-out-form.black {
+    font-size: 4rem;
+  }
+
+  .radio-button-field {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .radio-button-field:hover, .radio-button-field:active {
+    background-color: #4169b3;
   }
 }
 
@@ -5379,6 +5773,46 @@ img {
 
   .uui-pricing05_packages-heading {
     font-size: 2rem;
+  }
+
+  .form-button {
+    font-size: 1.13rem;
+  }
+
+  .check-button-field:hover, .check-button-field:active {
+    background-color: #4169b3;
+  }
+
+  .form-button-text, .form-heading {
+    font-size: 1.13rem;
+  }
+
+  .text-field {
+    color: var(--untitled-ui--gray900);
+    font-size: 1.13rem;
+  }
+
+  .form-page {
+    display: block;
+  }
+
+  .fill-out-form {
+    font-size: 2.5rem;
+  }
+
+  .fill-out-form.book {
+    background-color: #d8a628;
+    margin-top: 0;
+    padding: 3px 5px;
+    font-size: 3.5rem;
+  }
+
+  .fill-out-form.book.blackcall, .fill-out-form.black {
+    font-size: 2rem;
+  }
+
+  .radio-button-field:hover, .radio-button-field:active {
+    background-color: #4169b3;
   }
 }
 
@@ -6152,8 +6586,8 @@ img {
   }
 
   .how-it-works-info {
-    margin-left: 7vw;
-    margin-right: 7vw;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .the-gist {
@@ -6297,6 +6731,59 @@ img {
 
   .uui-pricing05_packages-heading {
     font-size: 2rem;
+  }
+
+  .check-button-field {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .check-button-field:hover, .check-button-field:active {
+    background-color: #4169b3;
+  }
+
+  .needs-wrap {
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+  }
+
+  .form-button-text, .form-heading {
+    font-size: 1rem;
+  }
+
+  .budget {
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+  }
+
+  .form-page {
+    display: block;
+  }
+
+  .fill-out-form {
+    font-size: 2rem;
+  }
+
+  .fill-out-form.book {
+    margin-top: 0;
+    font-size: 2rem;
+  }
+
+  .fill-out-form.book.blackcall {
+    font-size: 2rem;
+  }
+
+  .fill-out-form.black {
+    font-size: 1.5rem;
+  }
+
+  .radio-button-field {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .radio-button-field:hover, .radio-button-field:active {
+    background-color: #4169b3;
   }
 }
 
@@ -7171,11 +7658,6 @@ img {
     margin-left: 0;
   }
 
-  .how-it-works-info {
-    margin-left: 7vw;
-    margin-right: 7vw;
-  }
-
   .the-gist {
     font-size: 3rem;
   }
@@ -7356,6 +7838,77 @@ img {
   .uui-pricing05_packages-heading {
     margin-bottom: .5rem;
     font-size: 2rem;
+  }
+
+  .form-button {
+    font-size: .8rem;
+  }
+
+  .check-button-field {
+    margin-bottom: 0;
+    padding: 5px 15px;
+  }
+
+  .check-button-field:hover, .check-button-field:active {
+    background-color: #4169b3;
+  }
+
+  .form-button-text {
+    font-family: "9492799 Maisonneueext Book", Impact, sans-serif;
+    font-size: .9rem;
+  }
+
+  .form-heading {
+    font-size: .9rem;
+  }
+
+  .text-field {
+    font-size: .8rem;
+  }
+
+  .grid-10 {
+    grid-template-rows: auto auto;
+    grid-template-columns: 1fr;
+  }
+
+  .budget-wrap, .form-desc-div {
+    margin-top: 2rem;
+  }
+
+  .form-page {
+    margin-top: 5vh;
+    padding-bottom: 5vh;
+  }
+
+  .fill-out-form {
+    color: #fff;
+    font-size: 1.5rem;
+  }
+
+  .fill-out-form.book {
+    color: #fff;
+    margin-top: 0;
+    font-size: 1.5rem;
+  }
+
+  .fill-out-form.book.blackcall {
+    margin-left: 0;
+    font-size: 1.5rem;
+  }
+
+  .fill-out-form.black {
+    margin-top: 1vh;
+    margin-left: 0;
+    font-size: 1.5rem;
+  }
+
+  .radio-button-field {
+    margin-bottom: 0;
+    padding: 5px 15px;
+  }
+
+  .radio-button-field:hover, .radio-button-field:active {
+    background-color: #4169b3;
   }
 }
 
