--- a/css/daft-media.webflow.css
+++ b/css/daft-media.webflow.css
@@ -3613,6 +3613,10 @@ img {
   margin-right: 7vw;
 }
 
+.success-message, .error-message {
+  margin-top: 2rem;
+}
+
 @media screen and (min-width: 1280px) {
   .nav_wrap {
     display: none;
